--- a/templates/time.html
+++ b/templates/time.html
@@ -3,17 +3,10 @@
 <html>
     <head>
         <title>Just test template</title>
-        <style>
-            body {
-               background-color: red;
-            }
-            em {
-                color: LightSeaGreen;
-            }
-        </style>
     </head>
     <body>
         <h1>Hello World!</h1>
         <strong>{{ current_time }}</strong>
+        <p>why current time all the time right?<p>
     </body>
 </html>
