--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
-    <title>易静远'Blog</title>
+    <title>姜~周</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="http://picturebag.qiniudn.com/blog.css">
@@ -14,8 +14,8 @@
 <div id="layout" class="pure-g">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
-            <h1 class="brand-title">唐老板'Blog</h1>
-            <h2 class="brand-tagline"> - 吴院9帅。</h2>
+            <h1 class="brand-title">我是一个可爱的人</h1>
+            <h2 class="brand-tagline"> - 难道网红静静不觉得吗？</h2>
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item">
