--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
-    <title>姜~周</title>
+    <title>Java语言topic下热点话题--来自知乎网</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="http://picturebag.qiniudn.com/blog.css">
@@ -14,15 +14,15 @@
 <div id="layout" class="pure-g">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
-            <h1 class="brand-title">我是一个可爱的人</h1>
-            <h2 class="brand-tagline"> - 难道网红静静不觉得吗？</h2>
+            <h1 class="brand-title">一个可爱的人</h1>
+            <h2 class="brand-tagline"> 和勤劳的爬虫</h2>
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item">
                         <a class="pure-button" href="http://www.linkedin.com/in/%E9%9D%99%E8%BF%9C-%E6%98%93-b3371a102?trk=nav_responsive_tab_profile_pic">linkedin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="pure-button" href="https://www.facebook.com/profile.php?id=100003707677731">Facebook</a>
+                        <a class="pure-button" href="https://www.zhihu.com">知乎</a>
                     </li>
                 </ul>
             </nav>
