--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,12 @@
                     </p>
             </header>
 
-                <div class="post-description">
-                    <p>
-                        {{ post.content }}
-                    </p>
-                </div>
+{#                <div class="post-description">#}
+{#                    <p>#}
+{#                        {{ post.content }}#}
+{#                    </p>#}
+{#                </div>#}
+        {{ post.content }}
         </section>
     {% endfor %}
 </div><!-- /.blog-post -->
