--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
 <div id="layout" class="pure-g">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
-            <h1 class="brand-title">一个可爱的人</h1>
-            <h2 class="brand-tagline"> 和勤劳的爬虫</h2>
+            <h1 class="brand-title">一个很垃圾的</h1>
+            <h2 class="brand-tagline"> 和勤劳的爬虫^_^</h2>
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item">
