增加翻页的功能
利用django里的代码哈哈哈

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,13 +12,27 @@
                     </p>
             </header>
 
-{#                <div class="post-description">#}
-{#                    <p>#}
-{#                        {{ post.content }}#}
-{#                    </p>#}
-{#                </div>#}
-        {{ post.content }}
+                <div class="post-description">
+                    <p>
+                        {{ post.content }}
+                    </p>
+                </div>
         </section>
     {% endfor %}
 </div><!-- /.blog-post -->
+    <div class="pagination">
+    <span class="step-links">
+        {% if post_list.has_previous %}
+            <a href="?page={{ post_list.previous_page_number }}">上一页</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ post_list.number }} of {{ post_list.paginator.num_pages }}.
+        </span>
+
+        {% if post_list.has_next %}
+            <a href="?page={{ post_list.next_page_number }}">下一页</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
