--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 
                 <div class="post-description">
                     <p>
-                        {{ post.content }}
+                        {{ post.content|safe }}
                     </p>
                 </div>
         </section>
