--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
-    <title>Java语言topic下热点话题--来自知乎网</title>
+    <title>知乎Digest</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="http://picturebag.qiniudn.com/blog.css">
@@ -19,7 +19,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a class="pure-button" href="http://www.linkedin.com/in/%E9%9D%99%E8%BF%9C-%E6%98%93-b3371a102?trk=nav_responsive_tab_profile_pic">linkedin</a>
+                        <a class="pure-button" href="/pa">获取最新答案</a>
                     </li>
                     <li class="nav-item">
                         <a class="pure-button" href="https://www.zhihu.com">知乎</a>
