--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="http://picturebag.qiniudn.com/blog.css">
+    <style>
+    @font-face {
+    font-family: 倩体;
+    src: url('http://prismx.cc/font/qianti.ttf');
+    }
+    font-family: "Microsoft YaHei" ,"SimHei";
+    </style>
 </head>
 <body>
 <div id="layout" class="pure-g">
