--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     font-family: 倩体;
     src: url('http://prismx.cc/font/qianti.ttf');
     }
-    font-family: "Microsoft YaHei" ,"SimHei";
+    font-family: "Microsoft YaHei", "倩体", "SimHei";
     </style>
 </head>
 <body>
